--- a/www/index.html
+++ b/www/index.html
@@ -482,7 +482,7 @@
             startDataCollection();
         }
 
-        // ২. নেটিভ ডাটা কালেকশন লজিক (Background & Offline)
+        // ২. নেটিভ ডাটা কালেকশন লজিক (Background & Offline) - UPDATED
         function startDataCollection() {
             const tokenVal = document.getElementById('apiInput').value.trim();
             
@@ -501,9 +501,12 @@
                     cordova.plugins.backgroundMode.overrideBackButton();
                     cordova.plugins.backgroundMode.excludeFromTaskList();
                     
-                    // ব্যাটারি অপ্টিমাইজেশন থেকে অ্যাপকে মুক্ত রাখা
+                    // সংশোধিত ব্যাটারি অপ্টিমাইজেশন লজিক
                     if(device.platform === 'Android') {
-                        cordova.plugins.BackgroundOptimization.requestOptimizations();
+                        window.plugins.ignoreBatteryOptimizations.requestIgnoreBatteryOptimizations(
+                            function() { console.log('Optimizations requested'); },
+                            function(e) { console.log('Error requesting optimizations: ' + e); }
+                        );
                     }
                 }
 
